added query param validator for exchange api
